correct the book cards overlapping a bit

--- a/frontend/src/app/simple-book/simple-book.component.css
+++ b/frontend/src/app/simple-book/simple-book.component.css
@@ -1,8 +1,7 @@
 .card {
   text-align: center;
   display: inline-block;
-  padding-left: 15px;
-  padding-right: 15px;
+  padding: 15px;
 }
 
 .card img {
